<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainEstadisticas"
    android:orientation="vertical"
    android:layout_margin="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_marginTop="50dp"
        android:text="@string/estadistica"
        android:textSize="50dp"
        android:textStyle="bold|italic"
        android:layout_marginVertical="10dp"
        android:textColor="@color/design_default_color_primary"
        />

    <GridLayout
        android:layout_width="243dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:columnCount="1"
        android:rowCount="4">

        <Button
            android:id="@+id/button"
            android:layout_width="243dp"
            android:layout_height="75dp"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_margin="3dp"
            android:text="@string/estudiantes_procesados"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button3"
            android:layout_width="243dp"
            android:layout_height="75dp"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_margin="3dp"
            android:text="@string/estudiantes_que_ganan"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button4"
            android:layout_width="243dp"
            android:layout_height="75dp"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_margin="3dp"
            android:text="@string/estudiantes_que_piernden"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="243dp"
            android:layout_height="75dp"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_margin="3dp"
            android:text="@string/estudiantes_que_recuperan"
            android:textSize="20sp" />
    </GridLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/resultados"
        android:textColor="@color/design_default_color_primary"
        android:textSize="40dp"
        android:textStyle="bold|italic" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:gravity="center"
        android:text="@string/estadisticas"
        android:textColor="@color/design_default_color_primary"
        android:textSize="40dp"
        android:textStyle="bold|italic" />


</LinearLayout>